2007-07-27  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Database/AddinDatabase.cs,
	  Mono.Addins.Database/AddinScanner.cs: Better error reporting for
	  missing assemblies.

2007-07-25  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/AddinSessionService.cs,
	  Mono.Addins.Description/AddinDescription.cs,
	  Mono.Addins.Database/AddinScanner.cs: When loading an add-in root
	  check if the add-in has changed. If it changed, update the add-in
	  database to make sure the correct info is loaded.

2007-07-25  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/RuntimeAddin.cs: New GetResoruce overload.
	* Mono.Addins/ExtensionNode.cs: Added property for getting the parent
	  of a node. Some more protection against exceptions.

2007-07-06  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/ExtensionTree.cs: If a node has no children, there is no
	  need to recursively call LoadExtensionElement.
	* Mono.Addins/TreeNode.cs, Mono.Addins/ExtensionContext.cs: When
	  activating an add-in, don't add nodes in extensions that have not
	  yet been loaded.
	* Mono.Addins/AddinManager.cs: GetEntryAssembly returns null when
	  running in NUnit.

2007-07-03  Lluis Sanchez Gual <lluis@novell.com> 

	* AssemblyInfo.cs, Mono.Addins.mdp, Makefile.am: Sign the assembly.

2007-07-03  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/AddinInfo.cs, Mono.Addins/Addin.cs,
	  Mono.Addins.Description/AddinDescription.cs,
	  Mono.Addins.Database/DatabaseConfiguration.cs,
	  Mono.Addins.Database/AddinDatabase.cs: Added support for add-ins
	  which are disabled by default.
	* Mono.Addins.Database/AddinScanner.cs: Minor fix.

2007-07-02  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/GettextCatalog.cs: Removed old copyright notice, since
	  the file doesn't contain any code from the original class.

2007-07-02  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Database/AddinScanResult.cs,
	  Mono.Addins.Database/AddinScanner.cs: Don't scan assemblies which